# jra

./: Cargo.toml  README.md
sample/: 2022_races_sample.json  result_sample.json  wakuban_sample.json
src/: args.rs  common.rs  graderace.rs  main.rs  result.rs  wakuban.rs
