[package]
name = "jra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
encoding_rs = "0.8.30"
regex = "1.5.5"
reqwest = { version = "0.11.9", features = ["blocking"]}
scraper = "0.12.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = {version="1.17.0",  features = ["full"]}
